--- a/assessment.html
+++ b/assessment.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="assessment.css">
-    <title>小職が作ったあなたのいいところ診断</title>
+    <title>小職が作ったあなたのいいところ診断です。</title>
 </head>
 <body>
     <h1>あなたのいいところを診断します。</h1>
